--- a/oauth.html
+++ b/oauth.html
@@ -15,27 +15,26 @@
 
         <script type="text/javascript">
             // Client ID and API key from the Developer Console
-            var CLIENT_ID =
-                "842881549850-onnf4bfdvjlp5vbsr04q0cf9vkd2h51o.apps.googleusercontent.com";
-            var API_KEY = "AIzaSyB9rM2sv5vfNo4B2MZDgbK-tCAYg3CMiXA";
+            var CLIENT_ID = '';
+            var API_KEY = '';
 
             // Array of API discovery doc URLs for APIs used by the quickstart
             var DISCOVERY_DOCS = [
-                "https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest",
+                'https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest',
             ];
 
             // Authorization scopes required by the API; multiple scopes can be
             // included, separated by spaces.
-            var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
+            var SCOPES = 'https://www.googleapis.com/auth/calendar.readonly';
 
-            var authorizeButton = document.getElementById("authorize_button");
-            var signoutButton = document.getElementById("signout_button");
+            var authorizeButton = document.getElementById('authorize_button');
+            var signoutButton = document.getElementById('signout_button');
 
             /**
              *  On load, called to load the auth2 library and API client library.
              */
             function handleClientLoad() {
-                gapi.load("client:auth2", initClient);
+                gapi.load('client:auth2', initClient);
             }
 
             /**
@@ -76,12 +75,12 @@
              */
             function updateSigninStatus(isSignedIn) {
                 if (isSignedIn) {
-                    authorizeButton.style.display = "none";
-                    signoutButton.style.display = "block";
+                    authorizeButton.style.display = 'none';
+                    signoutButton.style.display = 'block';
                     listUpcomingEvents();
                 } else {
-                    authorizeButton.style.display = "block";
-                    signoutButton.style.display = "none";
+                    authorizeButton.style.display = 'block';
+                    signoutButton.style.display = 'none';
                 }
             }
 
@@ -106,8 +105,8 @@
              * @param {string} message Text to be placed in pre element.
              */
             function appendPre(message) {
-                var pre = document.getElementById("content");
-                var textContent = document.createTextNode(message + "\n");
+                var pre = document.getElementById('content');
+                var textContent = document.createTextNode(message + '\n');
                 pre.appendChild(textContent);
             }
 
@@ -119,16 +118,16 @@
             function listUpcomingEvents() {
                 gapi.client.calendar.events
                     .list({
-                        calendarId: "primary",
+                        calendarId: 'primary',
                         timeMin: new Date().toISOString(),
                         showDeleted: false,
                         singleEvents: true,
                         maxResults: 10,
-                        orderBy: "startTime",
+                        orderBy: 'startTime',
                     })
                     .then(function (response) {
                         var events = response.result.items;
-                        appendPre("Upcoming events:");
+                        appendPre('Upcoming events:');
 
                         if (events.length > 0) {
                             for (i = 0; i < events.length; i++) {
@@ -137,10 +136,10 @@
                                 if (!when) {
                                     when = event.start.date;
                                 }
-                                appendPre(event.summary + " (" + when + ")");
+                                appendPre(event.summary + ' (' + when + ')');
                             }
                         } else {
-                            appendPre("No upcoming events found.");
+                            appendPre('No upcoming events found.');
                         }
                     });
             }
